package com.igarciamen.invitations.model;

public enum InvitationStatus {
    PENDING,
    RESPONDED
}
