package com.igarciamen.users.enums;

public enum ERole {
    ROLE_USER,
    ROLE_DESIGNER,
    ROLE_ADMIN
}
