classDiagram
    direction LR

    %% ---------- users ----------
    class User {
        +Long id
        +String username
        +String email
        +String password
        +Set~Role~ roles
    }
    class Role {
        +Integer id
        +ERole name
    }
    class ERole {
        <<enumeration>>
        ROLE_USER
        ROLE_DESIGNER
        ROLE_ADMIN
    }
    User "1" *-- "many" Role : roles (user_roles)
    Role --> ERole : name

    %% ---------- surveys ----------
    class Survey {
        +Long id
        +Long ownerUserId
        +String title
        +String description
        +SurveyStatus status
        +SurveyAccess access
        +String accessPassword
        +Instant publishedAt
        +Instant closesAt
        +Instant createdAt
        +Instant updatedAt
    }
    class SurveyStatus {
        <<enumeration>>
        DRAFT
        PUBLISHED
        CLOSED
    }
    class SurveyAccess {
        <<enumeration>>
        OPEN
        PASSWORD
        RESTRICTED
    }
    class Question {
        +Long id
        +QuestionType type
        +String label
        +String helpText
        +boolean required
        +Integer position
    }
    class QuestionType {
        <<enumeration>>
        TEXT
        TEXTAREA
        NUMBER
        DATE
        BOOLEAN
        SINGLE_CHOICE
        MULTIPLE_CHOICE
        DROPDOWN
        RATING
    }
    class QuestionOption {
        +Long id
        +String label
        +String value
        +Integer position
    }
    Survey "1" *-- "many" Question : questions
    Question "1" *-- "many" QuestionOption : options
    Survey --> SurveyStatus : status
    Survey --> SurveyAccess : access
    Question --> QuestionType : type
    Survey ..> User : ownerUserId

    %% ---------- responses ----------
    class SurveyResponse {
        +Long id
        +Long surveyId
        +Long respondentUserId
        +Instant submittedAt
    }
    class Answer {
        +Long id
        +Long questionId
        +String textValue
        +List~Long~ selectedOptionIds
    }
    SurveyResponse "1" *-- "many" Answer : answers
    SurveyResponse ..> Survey : surveyId
    SurveyResponse ..> User : respondentUserId
    Answer ..> Question : questionId
    Answer ..> QuestionOption : selectedOptionIds

    %% ---------- invitations ----------
    class Invitation {
        +Long id
        +Long surveyId
        +String surveyTitle
        +Long ownerUserId
        +String email
        +String token
        +InvitationStatus status
        +Instant createdAt
        +Instant respondedAt
        +Long respondentUserId
    }
    class InvitationStatus {
        <<enumeration>>
        PENDING
        RESPONDED
    }
    Invitation --> InvitationStatus : status
    Invitation ..> Survey : surveyId
    Invitation ..> User : ownerUserId / respondentUserId

    %% ---- Estilos: paleta de contraste, sin naranja ----
    style User fill:#c7d2fe,stroke:#4f46e5,stroke-width:2px,color:#1e1b4b
    style Role fill:#c7d2fe,stroke:#4f46e5,stroke-width:2px,color:#1e1b4b
    style ERole fill:#e0e7ff,stroke:#6366f1,stroke-width:1px,color:#312e81

    style Survey fill:#bbf7d0,stroke:#16a34a,stroke-width:2px,color:#052e16
    style Question fill:#bbf7d0,stroke:#16a34a,stroke-width:2px,color:#052e16
    style QuestionOption fill:#bbf7d0,stroke:#16a34a,stroke-width:2px,color:#052e16
    style SurveyStatus fill:#dcfce7,stroke:#22c55e,stroke-width:1px,color:#14532d
    style SurveyAccess fill:#dcfce7,stroke:#22c55e,stroke-width:1px,color:#14532d
    style QuestionType fill:#dcfce7,stroke:#22c55e,stroke-width:1px,color:#14532d

    style SurveyResponse fill:#bae6fd,stroke:#0284c7,stroke-width:2px,color:#0c2233
    style Answer fill:#bae6fd,stroke:#0284c7,stroke-width:2px,color:#0c2233

    style Invitation fill:#fbcfe8,stroke:#db2777,stroke-width:2px,color:#500724
    style InvitationStatus fill:#fce7f3,stroke:#ec4899,stroke-width:1px,color:#831843
